# inverse_simulation

./: CMakeLists.txt  README.md  package.xml
contextualization/: context_visualizer.py
descriptors/analysis_engines/: is_naivphys4rp_demo.yaml
launch/: rs_dl.launch
scripts/contextualization/: context_visualizer.py  naivphys4rp.properties  search_example.xml
scripts/filtering/: filtering.py  utils.py
scripts/imagination/: imagination.py
src/augmentation/: CMakeLists.txt
src/augmentation/src/: Augmenter.cpp
src/contextualtization/: CMakeLists.txt
src/contextualtization/src/: Contextualizer.cpp
src/filtering/: CMakeLists.txt
src/filtering/src/: Filter.cpp
src/imagination/: CMakeLists.txt
src/imagination/src/: Imaginator.cpp
src/inverse_learning/: CMakeLists.txt
src/inverse_learning/src/: InverseLearner.cpp
